{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 125,
  "lineage": "bc3322c8-47d8-3fe3-d23b-314502501f47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03cda26106c113800",
            "domain": "vpc",
            "id": "eipalloc-03968bdb4fec47af2",
            "instance": "i-0bc21203d95e32288",
            "network_interface": "eni-0b74b9feaeaa19cc6",
            "private_dns": "ip-172-31-6-137.sa-east-1.compute.internal",
            "private_ip": "172.31.6.137",
            "public_dns": "ec2-54-207-1-191.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.1.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-terraform-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.keypair",
            "aws_security_group.http_anywhere_terraform",
            "aws_security_group.ssh_ping_anywhere_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05494b93950efa2fd",
            "arn": "arn:aws:ec2:sa-east-1:147125906902:instance/i-0bc21203d95e32288",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc21203d95e32288",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-terraform-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b74b9feaeaa19cc6",
            "private_dns": "ip-172-31-6-137.sa-east-1.compute.internal",
            "private_ip": "172.31.6.137",
            "public_dns": "ec2-18-231-112-196.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.231.112.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-055d8c398e5036f87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "my-terraform-http",
              "my-terraform-ssh_ping"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7024d016",
            "tags": {
              "Name": "my-terraform-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b805cc1ef975b9c1",
              "sg-0cb82ca0b6634109d"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.http_anywhere_terraform",
            "aws_security_group.ssh_ping_anywhere_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_anywhere_terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:147125906902:security-group/sg-0cb82ca0b6634109d",
            "description": "SSH and Ping allow from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb82ca0b6634109d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-terraform-http",
            "name_prefix": null,
            "owner_id": "147125906902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-terraform-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-b0ea91d7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_ping_anywhere_terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:147125906902:security-group/sg-0b805cc1ef975b9c1",
            "description": "SSH and Ping allow from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b805cc1ef975b9c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "my-terraform-ssh_ping",
            "name_prefix": null,
            "owner_id": "147125906902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-terraform-ssh_ping"
            },
            "timeouts": null,
            "vpc_id": "vpc-b0ea91d7"
          }
        }
      ]
    }
  ]
}